# minishell

./: CMakeLists.txt  Makefile  built_ins1.c  built_ins2.c  env.c  execute.c  expansion.c  find_executable.c  main.c  minishell.h  minishell_split.c
libft/: Makefile
libft/42/: ft_atoi.c  ft_bzero.c  ft_cycle_move.c  ft_hexdec.c  ft_is_hexdec.c  ft_is_whitespace.c  ft_isnumeric.c  ft_putstr_fd.c  ft_reverse.c  ft_tolower.c  ft_toupper.c  get_next_line.c
libft/include/: libft.h
libft/lst/: ft_list_size.c  ft_lstadd.c  ft_lstadd_end.c  ft_lstadd_sorted.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c
libft/mem/: ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/printf/: ft_itoa_for_printf.c  ft_printf.c  parsers.c  print_cs.c  print_float.c  print_numeric.c
libft/str/: ft_stralloc.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strnchr.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsub.c  ft_strtrim.c
